--- a/Sistema_Controle_Zoologico/appsettings.json
+++ b/Sistema_Controle_Zoologico/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ZoologicoApp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
