--- a/Sistema_Controle_Zoologico/appsettings.json
+++ b/Sistema_Controle_Zoologico/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ZoologicoApp.db"
+    "DefaultConnection": "Data Source=App_data/ZoologicoApp.db"
   },
   "Logging": {
     "LogLevel": {
